--- a/UCBookingAPI.csproj
+++ b/UCBookingAPI.csproj
@@ -7,11 +7,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
-        <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0"/>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0"/>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0"/>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.1"/>
-        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.2"/>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Azure.Identity" Version="1.14.2" />
+        <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.1" />
+        <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.2" />
+        <PackageReference Include="Microsoft.Graph" Version="5.87.0" />
+        <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.7" />
+        <PackageReference Include="Microsoft.Graph.Core" Version="3.2.4" />
     </ItemGroup>
 </Project>
