--- a/local.settings.json
+++ b/local.settings.json
@@ -2,10 +2,7 @@
     "IsEncrypted": false,
     "Values": {
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
-        "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
-        "ClientId": "YOUR_CLIENT_ID",
-        "ClientSecret": "YOUR_CLIENT_SECRET",
-        "TenantId": "YOUR_TENANT_ID"
+        "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
     },
     "Host": {
         "CORS": "http://localhost:5173,http://localhost:3000",
